samples/_failures_safe/1761325005_de9431_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f518ba4.c: In function ‘main’:
./samples/SAFE/__tmp_3f518ba4.c:145:9: error: expected expression at end of input
  145 |         for (int i =
      |         ^~~
./samples/SAFE/__tmp_3f518ba4.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f518ba4.c:145:9: error: expected declaration or statement at end of input
